# GreedyAlgorithms

./: CMakeLists.txt  README.md  main.cpp
Dijkstra/: Dijsktra.cpp  Dijsktra.h
FileReader/: FileReader.cpp
Graph/: Graph.cpp  Graph.h
Heap/: Heap.h
Kruskal/: Kruskal.cpp  Kruskal.h
Node/: Node.cpp  Node.h
PRIM/: PRIM.cpp  PRIM.h
